@@ -1,3 +1,8 @@
+Sat Sep 21 00:21:08 2013  Zachary Scott  <e@zzak.io>
+
+	* ext/openssl/lib/openssl/ssl.rb: [DOC] Document OpenSSL::SSLServer
+	  Based on a patch by Rafal Lisowski [Bug #7348]
+
 Fri Sep 20 23:54:03 2013  Zachary Scott  <e@zzak.io>
 
 	* lib/gserver.rb: [DOC] correct gserver.rb license [Bug #8913]
